<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/showAlphabet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphabet" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wordExercises"
        android:onClick="openWordExercises"
        android:background="#d1ae15" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phraseExercises"
        android:onClick="openPhraseExercises"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/mainParagraph"
        android:textSize="18dp"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:padding="10dp"
        android:paddingTop="20dp" />

</LinearLayout>
