<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.comoelagua.android.braille.CharactersExercisesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/wordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_label" />

        <TextView android:id="@+id/askNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView android:id="@+id/ask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:id="@+id/answer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textColor="#000000"
            android:textSize="36dp"
            android:contentDescription="@string/answerDescription"
            android:inputType="text"
            android:imeOptions="actionNext" />

        <Button android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/nextButton"
            android:text="@string/next"
            android:contentDescription="@string/nextDescription" />

    </LinearLayout>

</LinearLayout>
