<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/okLabel"
            android:textSize="18dp"
            android:layout_marginRight="20dp" />

        <TextView android:id="@+id/okValue"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/okLabel"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:background="#1bf429"
            android:paddingRight="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/failLabel"
            android:layout_marginRight="30dp" />

        <TextView android:id="@+id/failValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failLabel"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:paddingRight="30dp"
            android:background="#ee1616" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/review" />

        <ListView
            android:id="@+id/charactersErrorsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:scrollbars="vertical"
            android:layout_gravity="fill_vertical"
            android:layout_alignParentTop="true" />

    </LinearLayout>

</LinearLayout>
